// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPagination renders pagination on first page 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
      disabled=""
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      2
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      3
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      5
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      10
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination on last page 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      6
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      7
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      8
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      9
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      10
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
      disabled=""
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination when current page is at the beginning 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      2
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      3
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      5
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      10
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination when current page is at the end 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      6
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      7
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      8
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      9
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      10
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination when current page is in the middle 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      5
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      6
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      10
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination with exactly 5 pages 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      2
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      3
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      5
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination with few pages (≤5) 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      2
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      3
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination with many pages and current page near beginning 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      2
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      3
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      4
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      5
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      20
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination with many pages and current page near end 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      1
    </button>
    <span
      class="px-3 py-2 text-muted-foreground"
    >
      ...
    </span>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      16
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      17
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      18
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      19
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      20
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`BlogPagination renders pagination with only one page 1`] = `
<div>
  <div
    class="flex items-center justify-center gap-1 mt-8"
  >
    <button
      class="btn outline icon "
      data-testid="button"
      disabled=""
    >
      <span
        data-testid="chevron-left"
      >
        ←
      </span>
      <span
        class="sr-only"
      >
        Previous page
      </span>
    </button>
    <button
      class="btn default icon "
      data-testid="button"
    >
      1
    </button>
    <button
      class="btn outline icon "
      data-testid="button"
      disabled=""
    >
      <span
        data-testid="chevron-right"
      >
        →
      </span>
      <span
        class="sr-only"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;
